force enable early preview for now